force-app/main/default/objects/parent__c/parent__c.object-meta.xml
<CustomObject>
    <label>parent</label>
    <nameField>
        <label>parent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>parents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>