force-app/main/default/objects/parent__c/fields/avg__c.field-meta.xml
<CustomField>
    <fullName>avg__c</fullName>
    <label>avg</label>
    <summarizedField>child__c.marks__c</summarizedField>
    <summaryForeignKey>child__c.parent__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>