force-app/main/default/objects/parent__c/fields/count__c.field-meta.xml
<CustomField>
    <fullName>count__c</fullName>
    <label>count</label>
    <summaryForeignKey>child__c.parent__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>