force-app/main/default/objects/parent__c/fields/maxium__c.field-meta.xml
<CustomField>
    <fullName>maxium__c</fullName>
    <label>maxium</label>
    <summarizedField>child__c.marks__c</summarizedField>
    <summaryForeignKey>child__c.parent__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>