force-app/main/default/objects/parent__c/fields/min__c.field-meta.xml
<CustomField>
    <fullName>min__c</fullName>
    <label>min</label>
    <summarizedField>child__c.marks__c</summarizedField>
    <summaryForeignKey>child__c.parent__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>